[project]
name = "rye-dev"
version = "1.0.0"
description = "Workspace for rye development"
authors = [{ name = "Armin Ronacher", email = "armin.ronacher@active-4.com" }]
dependencies = [
    "mkdocs~=1.4.3",
    "mkdocs-material~=9.1.12",
    "pymdown-extensions~=9.11",
    "mdx-gh-links~=0.3",
    "mkdocs-simple-hooks~=0.1.5",
    "mkdocs-version-annotations~=1.0.0",
    "mkdocs-include-markdown-plugin~=4.0.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true

[tool.rye.scripts]
serve-docs = "mkdocs serve"

[tool.rye.workspace]
members = ["rye-devtools"]

[tool.pytest.ini_options]
addopts = "--ignore target"
