[package]
name = "rye"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
clap = { version = "4.2.2", default-features = false, features = ["derive", "usage", "wrap_help", "std"] }
console = "0.15.5"
curl = { version = "0.4.44", default-features = false }
decompress = { version = "0.6.0", default-features = false, features = ["tarzst", "targz"] }
flate2 = "1.0.25"
git-testament = "0.2.4"
globset = "0.4.10"
indicatif = "0.17.3"
memchr = "2.5.0"
minijinja = { version = "0.31.1", features = ["json"] }
nix = { version = "0.26.2", default-features = false, features = ["process"] }
once_cell = "1.17.1"
pathdiff = "0.2.1"
pep440_rs = "0.3.5"
pep508_rs = "0.1.5"
regex = "1.8.1"
same-file = "1.0.6"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.94"
shlex = "1.1.0"
simple-home-dir = "0.1.2"
slug = "0.1.4"
tar = "0.4.38"
tempfile = "3.5.0"
toml_edit = "0.19.8"
url = "2.3.1"
walkdir = "2.3.3"
which = "4.4.0"
zstd = "0.12.3"
openssl = {version = "*", features = ["vendored"], optional = true}

[features]
ssl = ["curl/ssl", "curl/static-curl", "openssl"]
