[package]
name = "rye"
version = "0.35.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = "0.10.0"
anyhow = { version = "1.0.70", features = ["backtrace"] }
clap = { version = "4.3.5", default-features = false, features = [
    "derive",
    "usage",
    "wrap_help",
    "std",
] }
clap_complete = "4.2.1"
clap_complete_nushell = "4.5.1"
console = "0.15.7"
curl = { version = "0.4.44", features = ["ssl", "static-curl", "static-ssl"] }
flate2 = "1.0.25"
git-testament = "0.2.4"
globset = "0.4.10"
indicatif = "0.17.3"
license = { version = "3.1.1", features = ["offline"] }
minijinja = { version = "2.0.1", features = ["json"] }
once_cell = "1.17.1"
pathdiff = "0.2.1"
pep440_rs = "0.4.0"
pep508_rs = "0.3.0"
regex = "1.8.1"
same-file = "1.0.6"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.94"
shlex = "1.3.0"
slug = "0.1.4"
tar = "0.4.38"
tempfile = "3.5.0"
toml_edit = "0.22.9"
url = "2.3.1"
walkdir = "2.3.3"
which = "6.0.0"
zstd = "0.13.0"
sha2 = "0.10.6"
dialoguer = { git = "https://github.com/console-rs/dialoguer", rev = "47a9d4df729db7ffc1492bd0845be786e6f20153" }
hex = "0.4.3"
junction = "1.0.0"
bzip2 = "0.4.4"
zip = { version = "0.6.5", features = ["deflate"], default-features = false }
self-replace = "1.3.5"
configparser = "3.0.2"
monotrail-utils = { git = "https://github.com/konstin/poc-monotrail", rev = "e0251f68c254f834180198b8677fcf85d4b6a844" }
python-pkginfo = { version = "0.6.0", features = ["serde"] }
home = "0.5.9"
ctrlc = "3.4.2"
dotenvy = "0.15.7"

[target."cfg(unix)".dependencies]
xattr = "1.3.1"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", default-features = false, features = ["winuser", "winioctl", "ioapiset"] }
winreg = "0.52.0"

[target."cfg(windows)".build-dependencies]
static_vcruntime = "2.0.0"

[dev-dependencies]
fslock = "0.2.1"
insta = { version = "1.35.1", features = ["filters"] }
insta-cmd = "0.5.0"
